fixed alignment of yasqe buttons

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,13 @@
 .yasqe {
+	.yasqe_buttons {
+		position: absolute;
+		top: 5px;
+		right: 5px;
+		z-index: 5;
+	}
+	.yasqe_buttons div {
+		vertical-align: middle;
+	}
 	.yasqe_queryButton {
 		display:inline-block;
 		cursor: pointer;
